# recruitment-app

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
base/: settings.py
users/: models.py  tests.py
users/management/commands/: migrate_gdpr_consents.py  migrate_subscribers.py
users/migrations/: 0001_initial.py
